[metadata]
name = py_auth_micro
author = Ole Hannemann
author_email = cerberus885@gmail.com
url = https://github.com/bad-microservices/py_auth_micro
description = A wrapper around pyjwt
keywords = JWT

long_description = file: README.rst
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3.0
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: Developers

[options]
packages = py_auth_micro, py_auth_micro.Models, py_auth_micro.Core, py_auth_micro.Config, py_auth_micro.LoginHandler, py_auth_micro.WorkFlows, py_auth_micro.Exceptions
install_requires =
    setuptools>=45.0
    tortoise-orm[asyncmy]
    bcrypt
    jwt_helper>=0.0.7

